# prompt-failure-prediction-0191-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: parsed_papers.json
papers/: README.md
papers/pages/: attention_head_stability_2026_manifest.txt  bussman2025_singular_vector_interpretability_manifest.txt  circuit_fingerprints_2026_manifest.txt  constrained_belief_geometric_2025_manifest.txt  mizrahi2024_state_of_prompt_fragility_manifest.txt  ricci_curvature_attention_neurips2024_manifest.txt  sclar2023_prompt_format_sensitivity_manifest.txt
results/: analysis_results.json  feature_data.csv  final_results.json  performance_results.json
src/: analysis.py  experiment.py
